Added SPR and Abundance Data Collectors as separate additional startables

--- a/inputs/YAML Samples/components/Gear.yaml
+++ b/inputs/YAML Samples/components/Gear.yaml
@@ -34,6 +34,7 @@ Threshold Gear Factory:
 Logistic Selectivity Gear:
   averageCatchability: '0.0'
   litersOfGasConsumedPerHour: '0.0'
+  logBaseTen: true
   retentionAsymptote: nullparameter
   retentionInflection: nullparameter
   retentionSlope: nullparameter
