--- a/inputs/tuna/.gitignore
+++ b/inputs/tuna/.gitignore
@@ -1,3 +1,5 @@
 empirical_fad_trajectories.csv
-simulated_fad_trajectories.csv
+simulated_fad_trajectories*.csv
 fad_trajectories_validation_cases.csv
+currents_hycom_*.csv
+currents_seapodym_*.csv
