--- a/build.gradle
+++ b/build.gradle
@@ -109,8 +109,8 @@ dependencies
     testCompile "com.google.code.gson:gson:2.8.5"
 
 
-    // Reference implementation of JSR-385 for units of measure
-    compile group: 'systems.uom', name: 'systems-common', version: '1.0'
+    // Apache SIS, useful for reading netCDF files, units of measure and coordinate operations
+    compile group: 'org.apache.sis.core', name: 'sis-referencing', version: '0.8'
 
 }
 
