use proper javax.measure.Quantity for hold volume
This is a bit overkill, given that hold volume is currently only used to
get the IATTC capacity class, but this is a bit of a test case for
potentially wider usage.

The Apache SIS library will also be useful for reading netCDF files, and
maybe some coordinate calculations, so it makes sense to bring it in.

--- a/build.gradle
+++ b/build.gradle
@@ -102,6 +102,8 @@ dependencies
     compile "com.google.guava:guava:23.0"
     compile "com.google.code.findbugs:jsr305:3.0.2"
 
+    // Apache SIS, useful for reading netCDF files, units of measure and coordinate operations
+    compile group: 'org.apache.sis.core', name: 'sis-referencing', version: '0.8'
 
 }
 
