--- a/eva/deriso.yaml
+++ b/eva/deriso.yaml
@@ -1,6 +1,22 @@
-!!uk.ac.ox.oxfish.maximization.CaliforniaDerisoOptimization {multiplier: 0.1, runsPerSetting: 1,
-  scenarioFile: docs/paper3_dts/mark2/exploratory/calibration/histograms/deriso_new_manual3.yaml,
-  seed: 0, startingDoverCatchability: 6.0E-5, startingLongspineCatchability: 2.0E-4,
-  startingSablefishCatchability: 3.17986760953E-5, startingShortspineCatchability: 4.32282202495E-5,
-  startingYelloweyeCatchability: 4.11440673662E-7, summaryDirectory: docs/paper3_dts/mark2/exploratory/eva,
-  yearsToIgnore: 1, yearsToRun: 5}
+!!uk.ac.ox.oxfish.maximization.CaliforniaDerisoOptimization
+parameters:
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: gear.delegate.gears~Dover Sole.averageCatchability,
+  alwaysPositive: true, maximum: 0.001, minimum: 1.0E-5}
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: gear.delegate.gears~Longspine Thornyhead.averageCatchability,
+  alwaysPositive: true, maximum: 0.001, minimum: 1.0E-5}
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: gear.delegate.gears~Sablefish.averageCatchability,
+  alwaysPositive: true, maximum: 0.001, minimum: 1.0E-5}
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: gear.delegate.gears~Shortspine Thornyhead.averageCatchability,
+  alwaysPositive: true, maximum: 0.001, minimum: 1.0E-5}
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: gear.delegate.gears~Yelloweye Rockfish.averageCatchability,
+  alwaysPositive: true, maximum: 0.001, minimum: 1.0E-5}
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: gear.proportionSimulatedToGarbage,
+  alwaysPositive: true, maximum: 0.5, minimum: 0.0}
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: holdSizePerBoat,
+  alwaysPositive: true, maximum: 15000.0, minimum: 1500.0}
+runsPerSetting: 1
+scenarioFile: docs/groundfish/calibration/step1_catchability/clamped.yaml
+seed: 0
+summaryDirectory: docs/groundfish/calibration/step1_catchability
+yearsToIgnore: 1
+yearsToRun: 5
