--- a/inputs/YAML Samples/components/FishingStrategy.yaml
+++ b/inputs/YAML Samples/components/FishingStrategy.yaml
@@ -23,3 +23,7 @@ WFS Logit Return:
   ratioCatchToFishHold: '4.37828'
   weekendDummy: '-0.24437'
 -------
+Random FAD Fishing Strategy
+-------
+Follow Plan FAD Fishing Strategy
+-------
