--- a/eva/deriso.yaml
+++ b/eva/deriso.yaml
@@ -1,26 +1,20 @@
 !!uk.ac.ox.oxfish.maximization.CaliforniaDerisoOptimization
 parameters:
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: gear.delegate.gears~Dover Sole.averageCatchability,
-  alwaysPositive: true, maximum: 0.001, minimum: 1.0E-5}
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: gear.delegate.gears~Longspine Thornyhead.averageCatchability,
-  alwaysPositive: true, maximum: 0.001, minimum: 1.0E-5}
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: gear.delegate.gears~Sablefish.averageCatchability,
-  alwaysPositive: true, maximum: 0.001, minimum: 1.0E-5}
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: gear.delegate.gears~Shortspine Thornyhead.averageCatchability,
-  alwaysPositive: true, maximum: 0.001, minimum: 1.0E-5}
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: gear.delegate.gears~Yelloweye Rockfish.averageCatchability,
-  alwaysPositive: true, maximum: 0.001, minimum: 1.0E-5}
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: holdSizePerBoat,
-  alwaysPositive: true, maximum: 15000.0, minimum: 1500.0}
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: destinationStrategy.probability.explorationProbability,
-  alwaysPositive: true, maximum: 0.8, minimum: 0.0}
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: destinationStrategy.probability.imitationProbability,
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: destinationStrategy.betaDistance,
+  alwaysPositive: true, maximum: -0.001, minimum: -0.01}
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: destinationStrategy.betaHabit,
+  alwaysPositive: true, maximum: 3.0, minimum: 0.0}
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: destinationStrategy.betaRevenue,
   alwaysPositive: true, maximum: 1.0, minimum: 0.0}
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: destinationStrategy.stepSize,
-  alwaysPositive: true, maximum: 10.0, minimum: 0.0}
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: destinationStrategy.betaCPUE~Dover Sole,
+  alwaysPositive: true, maximum: 1.0, minimum: -1.0}
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: destinationStrategy.betaCPUE~Sablefish,
+  alwaysPositive: true, maximum: 1.0, minimum: -1.0}
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: destinationStrategy.betaCPUE~Yelloweye Rockfish,
+  alwaysPositive: true, maximum: 1.0, minimum: -1.0}
 runsPerSetting: 1
-scenarioFile: docs/groundfish/calibration/alternative_opti/eei_start.yaml
+scenarioFile: docs/groundfish/calibration/step1_catchability/logit/start_nogarbage.yaml
 seed: 2
-summaryDirectory: docs/groundfish/calibration/alternative_opti
+summaryDirectory: docs/groundfish/calibration/step1_catchability/logit
 yearsToIgnore: 1
 yearsToRun: 5
