migrate to Indriya (instead of Apache SIS) for units of measure
Indriya is the reference implementation for the new JSR-385 standard.

Besides being generally the way forward, it offers non-SI units like
TONNE and KNOT out of the box, which is nice for us.

We were not using any of Apache SIS's other features for now anyway.

--- a/build.gradle
+++ b/build.gradle
@@ -102,8 +102,8 @@ dependencies
     compile "com.google.guava:guava:23.0"
     compile "com.google.code.findbugs:jsr305:3.0.2"
 
-    // Apache SIS, useful for reading netCDF files, units of measure and coordinate operations
-    compile group: 'org.apache.sis.core', name: 'sis-referencing', version: '0.8'
+    // Reference implementation of JSR-385 for units of measure
+    compile group: 'systems.uom', name: 'systems-common', version: '1.0'
 
 }
 
