added a gamma distributed VB growth model; doesn't work very well in practice but it's there

--- a/eva/deriso.yaml
+++ b/eva/deriso.yaml
@@ -1,20 +1,22 @@
 !!uk.ac.ox.oxfish.maximization.CaliforniaDerisoOptimization
 parameters:
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: gear.delegate.gears~Dover Sole.averageCatchability,
-  alwaysPositive: true, maximum: 0.001, minimum: 1.0E-5}
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: gear.delegate.gears~Longspine Thornyhead.averageCatchability,
-  alwaysPositive: true, maximum: 0.001, minimum: 1.0E-5}
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: gear.delegate.gears~Sablefish.averageCatchability,
-  alwaysPositive: true, maximum: 0.001, minimum: 1.0E-5}
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: gear.delegate.gears~Shortspine Thornyhead.averageCatchability,
-  alwaysPositive: true, maximum: 0.001, minimum: 1.0E-5}
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: gear.delegate.gears~Yelloweye Rockfish.averageCatchability,
-  alwaysPositive: true, maximum: 0.001, minimum: 1.0E-5}
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: holdSizePerBoat,
-  alwaysPositive: true, maximum: 15000.0, minimum: 1500.0}
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: destinationStrategy.betaDistance,
+  alwaysPositive: false, maximum: -0.001, minimum: -0.01}
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: destinationStrategy.intercept,
+  alwaysPositive: false, maximum: 100.0, minimum: 0.0}
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: destinationStrategy.betaHabit,
+  alwaysPositive: false, maximum: 3.0, minimum: -3.0}
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: destinationStrategy.betaRevenue,
+  alwaysPositive: false, maximum: 1.0, minimum: 0.0}
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: destinationStrategy.betaCPUE~Dover Sole,
+  alwaysPositive: false, maximum: 1.0, minimum: -1.0}
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: destinationStrategy.betaCPUE~Sablefish,
+  alwaysPositive: false, maximum: 1.0, minimum: -1.0}
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter {addressToModify: destinationStrategy.betaCPUE~Yelloweye Rockfish,
+  alwaysPositive: false, maximum: 1.0, minimum: -1.0}
 runsPerSetting: 1
-scenarioFile: docs/groundfish/calibration/step1_catchability/map/start.yaml
+scenarioFile: docs/groundfish/calibration/northquota_yesgarbage/nofleetwide_identity.yaml
 seed: 2
-summaryDirectory: docs/groundfish/calibration/step1_catchability/map
+summaryDirectory: docs/groundfish/calibration/northquota_yesgarbage
 yearsToIgnore: 1
 yearsToRun: 5
