--- a/inputs/YAML Samples/components/DestinationStrategy.yaml
+++ b/inputs/YAML Samples/components/DestinationStrategy.yaml
@@ -81,7 +81,7 @@ SNALSAR:
   profit:
     Remembered Profits:
       includeOpportunityCosts: true
-  safety: Socially Acceptable Everywhere
+  safety: Ignore Rules
   sociallyAcceptable: Nobody Fishes Here
 -------
 Heatmap Based:
@@ -152,6 +152,22 @@ Discretized Bandit:
   objectiveFunction:
     Hourly Profit Objective:
       opportunityCosts: true
+-------
+Simple Random Utility Model:
+  automaticallyAvoidMPA: true
+  automaticallyAvoidWastelands: true
+  betaCPUE:
+    Species 0: '1.0'
+  betaDistance: '-1.0'
+  betaHabit: '1.0'
+  betaRevenue: '1.0'
+  discretizer:
+    Squared Discretization:
+      horizontalSplits: '2.0'
+      verticalSplits: '2.0'
+  fleetWide: true
+  intercept: '1.0'
+  logToFile: false
 -------
 Florida Longliner:
   automaticallyAvoidMPA: true
@@ -280,6 +296,9 @@ Perfect RPUE Logit:
   discretizer: Identity Discretization
   hoursOut: '120.0'
   profitBeta: '1.0'
+-------
+Perfect Knowledge:
+  maxHoursOut: '120.0'
 -------
 Replicator:
   inertia: '0.8'
