--- a/inputs/YAML Samples/components/Regulation.yaml
+++ b/inputs/YAML Samples/components/Regulation.yaml
@@ -119,7 +119,7 @@ Port Based Wait Times:
   portWaitTimes:
     Port 0: '0'
 -------
-Port Based Wait Times:
+Max Hours Out:
   delegate: Anarchy
   maxHoursOut: '1000.0'
 -------
