--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,9 @@ dependencies
     compile "com.opencsv:opencsv:3.8"
     compile "com.univocity:univocity-parsers:2.8.1"
 
+    // Google's JSON library
+    implementation 'com.google.code.gson:gson:2.8.5'
+
     //logger:
     compile "com.esotericsoftware:minlog:1.3.0"
     //serializer
