--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: java
-install: true
-dist: trusty
+#install: true
+#dist: trusty
+
+
+jdk:
+  - oraclejdk8
+  - oraclejdk11
+  - oraclejdk13
 
 script:
 - ./gradlew build --scan -s
