--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
     //id "us.kirchmeier.capsule" version "1.0.1"
     //id "jacoco"
     id 'com.github.johnrengelman.shadow' version '2.0.0'
-    id 'com.gradle.build-scan' version '1.16'
+    id "com.gradle.build-scan" version "3.0"
 
 }
 
