--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ language: java
 
 
 jdk:
-  - oraclejdk8
-  - oraclejdk11
-  - oraclejdk13
+  - openjdk8
+  - openjdk11
+  - openjdk13
 
 script:
 - ./gradlew build --scan -s
