--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,14 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '5.1.0'
 }
 
-
-
-mainClassName = 'uk.ac.ox.oxfish.Main'
+application {
+    mainClassName = 'uk.ac.ox.oxfish.Main'
+    applicationDefaultJvmArgs = ["-Xms1024m", "-Xmx2048m"]
+}
 
 repositories {
     mavenLocal()
     mavenCentral()
-
 }
 
 sourceSets
