--- a/inputs/tuna/calibration.yaml
+++ b/inputs/tuna/calibration.yaml
@@ -2,32 +2,32 @@
 scenarioFile: /home/nicolas/workspace/POSEIDON/inputs/tuna/tuna.yaml
 maximization: no
 runsPerSetting: 1
-simulatedYears: 1
+simulatedYears: 2
 parameters:
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fisherDefinition.fishingStrategy.fadsDeploymentCoefficient
-  minimum: 1.0e-10
+  minimum: 0.0
   maximum: 0.1
   alwaysPositive: yes
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fisherDefinition.fishingStrategy.otherFadsSettingCoefficient
-  minimum: 1.0e-10
+  minimum: 0.0
   maximum: 0.1
   alwaysPositive: yes
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fisherDefinition.fishingStrategy.ownFadsSettingCoefficient
-  minimum: 1.0e-10
+  minimum: 0.0
   maximum: 0.1
   alwaysPositive: yes
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fisherDefinition.fishingStrategy.unassociatedSetCoefficient
-  minimum: 1.0e-10
+  minimum: 0.0
   maximum: 0.1
   alwaysPositive: yes
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fisherDefinition.fishingStrategy.probabilityDecayCoefficient
-  minimum: 1.0e-10
-  maximum: 0.1
+  minimum: 0.0
+  maximum: 10.0
   alwaysPositive: yes
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fisherDefinition.gear.fadInitializerFactory.attractionRates~Bigeye
