--- a/build.gradle
+++ b/build.gradle
@@ -231,13 +231,13 @@ task fatJarBatch(type: com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJa
 
 
 
-task fatJarSensitivity(type: com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
+task fatJarNoDataSlice2(type: com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
     mergeServiceFiles()
-    archiveName = 'oxfish_sensitivity.jar'
+    archiveName = 'oxfish_nodataslice2.jar'
     from sourceSets.main.output //tells the task to include the project code
     configurations = [ project.configurations.compile ] //tells the task to shadow in the jars files in the 'runtime' scope
     manifest {
-        attributes 'Main-Class': 'uk.ac.ox.oxfish.experiments.indonesia.Slice2019Sensitivity'
+        attributes 'Main-Class': 'uk.ac.ox.oxfish.experiments.indonesia.limited.NoDataSlice2'
     }
 }
 
