--- a/inputs/tuna/calibration.yaml
+++ b/inputs/tuna/calibration.yaml
@@ -1,5 +1,5 @@
 !!uk.ac.ox.oxfish.maximization.GenericOptimization
-scenarioFile: ./inputs/tuna/tuna.yaml
+scenarioFile: inputs/tuna/tuna.yaml
 maximization: no
 runsPerSetting: 1
 simulatedYears: 2
@@ -7,44 +7,54 @@ parameters:
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fisherDefinition.fishingStrategy.fadsDeploymentCoefficient
   minimum: 0.0
-  maximum: 0.1
+  maximum: 0.01
   alwaysPositive: yes
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fisherDefinition.fishingStrategy.otherFadsSettingCoefficient
   minimum: 0.0
-  maximum: 0.1
+  maximum: 0.01
   alwaysPositive: yes
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fisherDefinition.fishingStrategy.ownFadsSettingCoefficient
   minimum: 0.0
-  maximum: 0.1
+  maximum: 0.01
   alwaysPositive: yes
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fisherDefinition.fishingStrategy.unassociatedSetCoefficient
   minimum: 0.0
-  maximum: 0.1
+  maximum: 0.01
   alwaysPositive: yes
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fisherDefinition.fishingStrategy.probabilityDecayCoefficient
   minimum: 0.0
-  maximum: 10.0
+  maximum: 0.1
+  alwaysPositive: yes
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
+  addressToModify: fisherDefinition.destinationStrategy.numberOfStepsToLookAheadForFadPositions
+  minimum: 30.0
+  maximum: 100.0
+  alwaysPositive: yes
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
+  addressToModify: fisherDefinition.destinationStrategy.travelSpeedMultiplier
+  minimum: 0.1
+  maximum: 0.9
   alwaysPositive: yes
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fisherDefinition.gear.fadInitializerFactory.attractionRates~Bigeye
     tuna
-  minimum: 0.00001
+  minimum: 0.0
   maximum: 0.05
   alwaysPositive: yes
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fisherDefinition.gear.fadInitializerFactory.attractionRates~Yellowfin
     tuna
-  minimum: 0.00001
+  minimum: 0.0
   maximum: 0.05
   alwaysPositive: yes
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fisherDefinition.gear.fadInitializerFactory.attractionRates~Skipjack
     tuna
-  minimum: 0.00001
+  minimum: 0.0
   maximum: 0.05
   alwaysPositive: yes
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
@@ -62,16 +72,16 @@ targets:
 - !!uk.ac.ox.oxfish.maximization.generic.ScaledFixedDataLastStepTarget
   columnName: Yellowfin tuna Catches (kg)
   fixedTarget: 6.0008e+07
-#- !!uk.ac.ox.oxfish.maximization.generic.ScaledFixedDataLastStepTarget
-#  columnName: Average Trip Duration
-#  fixedTarget: 903.2562634
-#- !!uk.ac.ox.oxfish.maximization.generic.ScaledFixedDataLastStepTarget
-#  columnName: Number of FAD sets
-#  fixedTarget: 9724.0
-#- !!uk.ac.ox.oxfish.maximization.generic.ScaledFixedDataLastStepTarget
-#  columnName: Number of unassociated sets
-#  fixedTarget: 3303.0
-#- !!uk.ac.ox.oxfish.maximization.generic.ScaledFixedDataLastStepTarget
-#  columnName: Number of FAD deployments
-#  fixedTarget: 20238.0
+- !!uk.ac.ox.oxfish.maximization.generic.ScaledFixedDataLastStepTarget
+  columnName: Average Trip Duration
+  fixedTarget: 903.2562634
+- !!uk.ac.ox.oxfish.maximization.generic.ScaledFixedDataLastStepTarget
+  columnName: Total number of FAD deployments
+  fixedTarget: 19103.0
+- !!uk.ac.ox.oxfish.maximization.generic.ScaledFixedDataLastStepTarget
+  columnName: Total number of FAD sets
+  fixedTarget: 9225.0
+- !!uk.ac.ox.oxfish.maximization.generic.ScaledFixedDataLastStepTarget
+  columnName: Total number of unassociated sets
+  fixedTarget: 1927.0
 
